<resources>
    <string name="app_name">hinge-homework</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Name</string>
    <string name="gender">Gender</string>
    <string name="about">About</string>
    <string name="school">School</string>
    <string name="hobbies">Hobbies</string>
</resources>